force-app/main/default/objects/Batch__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <displayFormat>BATCH-{000000}</displayFormat>
    <label>Batch Number</label>
    <type>AutoNumber</type>
</CustomField>