force-app/main/default/objects/Batch__c/fields/Calculated_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Expiration_Date__c</fullName>
    <formula>Production_Date__c + Product__r.Shelf_Life_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Expiration Date</label>
    <type>Date</type>
</CustomField>