force-app/main/default/objects/Batch__c/fields/Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Date__c</fullName>
    <label>Production Date</label>
    <type>Date</type>
</CustomField>