force-app/main/default/objects/Batch__c/fields/Quality_Check_Passed__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Check Passed</label>
    <type>Checkbox</type>
</CustomField>