force-app/main/default/objects/Batch__c/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>