force-app/main/default/objects/Batch__c/fields/Roast_Level__c.field-meta.xml
<CustomField>
    <fullName>Roast_Level__c</fullName>
    <label>Roast Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Medium_Dark</fullName>
                <label>Medium Dark</label>
            </value>
            <value>
                <fullName>Dark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>